// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPortfolioComparePeriod works with empty params 1`] = `
Object {
  "dates": Object {
    "since": 18992,
    "until": 18993,
  },
  "old_dates": Object {
    "since": 18990,
    "until": 18991,
  },
}
`;

exports[`getPortfolioComparePeriod works with full params 1`] = `
Object {
  "dates": Object {
    "since": 18932,
    "until": 18993,
  },
  "old_dates": Object {
    "since": 18870,
    "until": 18931,
  },
}
`;

exports[`getPortfolioComparePeriod works with full params 2`] = `
Object {
  "dates": Object {
    "since": 18985,
    "until": 18993,
  },
  "old_dates": Object {
    "since": 18976,
    "until": 18984,
  },
}
`;

exports[`getPortfolioComparePeriod works with full params 3`] = `
Object {
  "dates": Object {
    "since": 18962,
    "until": 18993,
  },
  "old_dates": Object {
    "since": 18930,
    "until": 18961,
  },
}
`;

exports[`getPortfolioComparePeriod works with full params 4`] = `
Object {
  "dates": Object {
    "since": 18627,
    "until": 18993,
  },
  "old_dates": Object {
    "since": 18260,
    "until": 18626,
  },
}
`;
